@@ -11,6 +11,9 @@ kbd-chooser (1.44) UNRELEASED; urgency=low
   * Add support for parsing "CapsShift" in keymaps.  (Closes: #490611)
   * Update symbol tables to the one found in kbd 1.14.1.
   * Merge unicode handling from kbd 1.14.1.
+  * Work around DirectFB setting the keyboard mode to K_MEDIUMRAW, thus
+    preventing full unicode keymaps to be installed when using the graphical
+    installer.  (Closes: #490610)
 
  -- Frans Pop <fjp@debian.org>  Thu, 29 May 2008 08:47:11 +0200
 
